# KSApplication

./: Readme.md
Core/: Commons.h
Core/Concurrent/: LooperThread.cpp  LooperThread.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h
Core/Concurrent/Test/: CMakeLists.txt  ThreadTest.cpp  ThreadTest.h  main.cpp
Core/KSDS/: BlockingQueue.h  CMakeLists.txt  SafeQueue.h
Core/KSIO/: AssetManager.cpp  AssetManager.h  IKSStream.h
Core/KSMedia/KSFrame/: KSFrame.h  KSImage.h
Graphics/: CMakeLists.txt  Display.cpp  Display.h  GLContext.cpp  GLContext.h  GLFrameBuffer.cpp  GLFrameBuffer.h  Geometry.h  KSColor.cpp  KSColor.hpp  KSWindow.cpp  KSWindow.h  Shader.cpp  Shader.h  Sizes.h
Graphics/Animation/: IAnimator.cpp  IAnimator.h
Graphics/KSUI/: CMakeLists.txt  ClickListener.cpp  ClickListener.h  ISliderView.cpp  ISliderView.h  LinearLayout.cpp  LinearLayout.h  Notes  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h
Graphics/KSUI/GL/: GLImageView.cpp  GLImageView.h  GLLineView.cpp  GLLineView.h  GLSliderView.cpp  GLSliderView.h  GLView.cpp  GLView.h  GradientView.cpp  GradientView.h  HSIImageView.cpp  HSIImageView.h  RectView.cpp  RectView.h
Graphics/KSUI/Renderer/: GLRenderer.cpp  GLRenderer.h  GLUIOffScreenRenderer.cpp  GLUIOffScreenRenderer.h  GLUIRenderer.cpp  GLUIRenderer.h  Renderer.cpp  Renderer.h  VulkanUIRenderer.cpp  VulkanUIRenderer.h
Graphics/KSUI/Renderer/Shaders/: vert.glsl
Graphics/KSUI/Text/: CMakeLists.txt  Font.cpp  Font.h  Text.cpp  Text.h  TextView.cpp  TextView.h
Graphics/MVulkan/: CMakeLists.txt  KSVulkan.cpp  KSVulkan.h
Graphics/Texture/: GLTexture.cpp  GLTexture.h
Graphics/Vulkan/: CMakeLists.txt  KSVKTexture.h  KSVkDevice.cpp  KSVkDevice.h  KSVulkan.cpp  KSVulkan.h  LayersAndExtensions.cpp  LayersAndExtensions.h  Readme.md  ShaderManager.cpp  ShaderManager.h  TODO
Graphics/Vulkan/Renderers/: KSVkRenderer.cpp  KSVkRenderer.h
Graphics/Vulkan/VKUtils/: VulkanUtils.cpp  VulkanUtils.h
Graphics/VulkanMAC/: CMakeLists.txt  KSVulkan.cpp  KSVulkan.hpp
KSApp/: AppUtils.cpp  AppUtils.h  CMakeLists.txt  KSApplication.cpp  KSApplication.h  TODO
KSApp/Events/: AndroidEvents.cpp  AndroidEvents.h  AppEvent.cpp  AppEvent.hpp  AppEvents.cpp  AppEvents.h  CustomEvents.cpp  CustomEvents.h  InputEvent.cpp  InputEvent.h  KeyEvent.h  MotionEvent.cpp  MotionEvent.h  TODO
KSApp/IO/: KSAssetReader.cpp  KSAssetReader.h
KSApp/JNI/: AppJavaCalls.cpp  AppJavaCalls.h  JNIImage.cpp  JNIImage.hpp  KSNativeActivityBridge.cpp  KSNativeActivityBridge.hpp
KSLogger/: CMakeLists.txt  KSLog.cpp  KSLog.h
KSMedia/: CMakeLists.txt  KSImageLoader.cpp  KSImageLoader.h
KSMedia/ImageCodec/: STBImageLoader.cpp  STBImageLoader.h  stb_image.h
KSMedia/KSImage/: CMakeLists.txt  KSImageLoader.h  Texture.cpp  Texture.h
KSMedia/KSImage/ImageCodec/: STBImageLoader.cpp  STBImageLoader.h
Logger/: CMakeLists.txt  KSLog.cpp  KSLog.h
